--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ prost = "0.11"
 substreams = "0.5"
 # Use latest from https://crates.io/crates/substreams-ethereum
 substreams-ethereum = "0.8"
+hex = "0.4.3"
 
 # Required so that ethabi > ethereum-types build correctly under wasm32-unknown-unknown
 [target.wasm32-unknown-unknown.dependencies]
@@ -25,6 +26,7 @@ getrandom = { version = "0.2", features = ["custom"] }
 [build-dependencies]
 anyhow = "1"
 substreams-ethereum = "0.8"
+# substreams-ethereum = "0.1.2"
 
 [profile.release]
 lto = true
