--- a/substreams.yaml
+++ b/substreams.yaml
@@ -6,6 +6,8 @@ package:
 protobuf:
   files:
     - erc721.proto
+    - tokens.proto
+    
   importPaths:
     - ./proto
 
@@ -30,3 +32,18 @@ modules:
     valueType: int64
     inputs:
       - map: map_transfers
+
+  - name: map_tokens
+    kind: map
+    initialBlock: 0
+    inputs:
+      - source: sf.ethereum.type.v2.Block
+    output:
+      type: proto:sf.ethereum.tokens.v1.Tokens
+
+  - name: store_tokens
+    kind: store
+    updatePolicy: set
+    valueType: proto:sf.ethereum.tokens.v1.Token
+    inputs:
+      - map: map_tokens
